sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:21: error: illegal start of simple expression
  setValue(9,)
             ^AlgInsertionSort:22: error: ')' expected but '}' found.
} 
^