sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v=0
  var realj=0
  var lat=0
  var P=getValueCount()-2
  for (i<- 0 to getValueCount()-2){
    v=i
    for (j<- 0 to i){
      realj=i-j
      lat=realj+1
      if (isSmaller(realj,v)==false){
        lat=realj
        copy(realj,realj+1)
        setValue(lat,v)
      }
    }

    
  }
  setValue(9,)
}